made checkboxes cleaner

--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
                     <!-- Add checkbox filter for regions for the visualizations above the map-->
                     <div class="region-filter">
                         <p>Filter Plots by Region: </p>
-                        <label for="Cape"><input type="checkbox" name="check2" value="Cape Cod and Islands" class="region-button">Cape Cod and Islands</label>
-                        <label for="Central"><input type="checkbox" name="check2" value="Central"class="region-button">Central</label>
-                        <label for="Connecticut"><input type="checkbox" name="check2" value="Connecticut River" class="region-button">Connecticut River</label>
-                        <label for="Northeast"><input type="checkbox" name="check2" value="Northeast" class="region-button">Northeast</label>
-                        <label for="Southeast"><input type="checkbox" name="check2" value="Southeast" class="region-button">Southeast</label>
-                        <label for="Western"><input type="checkbox" name="check2" value="Western" class="region-button">Western</label>
+                        <label for="Cape"><input type="checkbox" name="check2" value="Cape Cod and Islands" class="region-button">Cape Cod and Islands</label><br>
+                        <label for="Central"><input type="checkbox" name="check2" value="Central"class="region-button">Central</label><br>
+                        <label for="Connecticut"><input type="checkbox" name="check2" value="Connecticut River" class="region-button">Connecticut River</label><br>
+                        <label for="Northeast"><input type="checkbox" name="check2" value="Northeast" class="region-button">Northeast</label><br>
+                        <label for="Southeast"><input type="checkbox" name="check2" value="Southeast" class="region-button">Southeast</label><br>
+                        <label for="Western"><input type="checkbox" name="check2" value="Western" class="region-button">Western</label><br>
+                        <ul>
                     </div>
 
                     <br> 
@@ -180,7 +181,7 @@
     <div id="Visualization3" class="tabcontent">
         <!-- Define what "SPI" means because it is a critical feature in our visualizations -->
         <p>"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
-        
+
         <!-- Create the section that contains a bar chart and a scatter plot that are linked together through brushing and clicking-->
         <div class="link">
                 <div class="year-filter3">
