restyled linked charts

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 
         <!-- Create the section that contains a bar chart and a scatter plot that are linked together through brushing and clicking-->
         <div class="link">
+                <div class="child1">
                 <div class="year-filter3">
                     <!-- Create a drop down menu that allows users to filter the charts by year -->
                     <p>Filter Charts by Year: </p>
@@ -205,6 +206,8 @@
                         <div id="legend2"></div>
                     </p>
                 </div>
+            </div>
+                <div class="child2">
                 <div id="link1">
                     <!-- Add a title and linking directions above the bar chart -->
                     <h4 class="centered">Annual Precipitation for Each Region</h4>
@@ -215,6 +218,7 @@
                     <h4 class="centered">Precipitation vs. SPI</h4>
                     <p class="centered">Brush over points to highlight bars that represent the same region.</p>
                 </div>
+            </div>
         </div>
     </div>
 
