fixed sizing for vis 3

--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
         <p>"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
 
         <!-- Create the section that contains a bar chart and a scatter plot that are linked together through brushing and clicking-->
+        <div class="container">
         <div class="link">
-                <div class="child1">
+                <div class="child3">
                 <div class="year-filter3">
                     <!-- Create a drop down menu that allows users to filter the charts by year -->
                     <p>Filter Charts by Year: </p>
@@ -207,7 +208,7 @@
                     </p>
                 </div>
             </div>
-                <div class="child2">
+                <div class="child4">
                 <div id="link1">
                     <!-- Add a title and linking directions above the bar chart -->
                     <h4 class="centered">Annual Precipitation for Each Region</h4>
@@ -220,6 +221,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div id="Acknowledgements" class="tabcontent">
