--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2>Visualization</h2>
 
         <!-- Define what "SPI" means because it is a critical feature in our visualizations -->
-        <p>"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
+        <p class="purple">"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
 
         <!-- Create separate section for content (visualization) of webpage -->
         <div class="container">
@@ -73,7 +73,7 @@
                 <div id="legend1">
                     <!-- Add checkbox filter for regions for the visualizations above the map-->
                     <div class="region-filter">
-                        <p>Filter Plots by Region: </p>
+                        <p class="purple">Filter Plots by Region: </p>
                         <label for="Cape"><input type="checkbox" name="check2" value="Cape Cod and Islands" class="region-button">Cape Cod and Islands</label><br>
                         <label for="Central"><input type="checkbox" name="check2" value="Central"class="region-button">Central</label><br>
                         <label for="Connecticut"><input type="checkbox" name="check2" value="Connecticut River" class="region-button">Connecticut River</label><br>
@@ -86,7 +86,7 @@
                     <br> 
 
                     <!-- Add instructions for how to access the tooltip for the plots above the map-->
-                    <p1 class="centered">Hover over a point to see the data it represents.</p1>
+                    <p1 class="purple" class="centered">Hover over a point to see the data it represents.</p1>
 
                 </div>
             </div>
@@ -100,16 +100,16 @@
                     <h3 class="centered">Precipitation Over Selected Time and Regions</h3>
 
                     <!-- Add instructions for how to get data to show on the line chart and how to interact with it-->
-                    <p1 class="centered">Select a region(s) on the left and a year in the drop down menu. Then, click on the button to see the corresponding data.</p1>
+                    <p1 class="purple" class="centered">Select a region(s) on the left and a year in the drop down menu. Then, click on the button to see the corresponding data.</p1>
 
                     <br>
                     <br>
 
-                    <p1 class="centered">Note that some regions lack data for certain years, so not all 6 lines will show for each year.</p1>
+                    <p1 class="purple" class="centered">Note that some regions lack data for certain years, so not all 6 lines will show for each year.</p1>
 
                     <!-- Add drop down menu filter for years -->
                     <div class="year-filter1">
-                        <p>Filter by Year: </p>
+                        <p class="purple">Filter by Year: </p>
                         <select name="check" id="selectYear1"></select>
                     </div> 
 
@@ -134,12 +134,12 @@
                     <h3 class="centered">A Projection of Whether Lower Precipitation Values Indicate a Higher Risk of Intense Droughts</h3>
 
                     <!-- Add instructions for how to get data to show on the scatter plot and how to interact with it-->
-                    <p1 class="centered">Select a region(s) on the left and year(s) and month(s) in the checkboxes. Then, click on the button to see the corresponding data.</p1>
+                    <p1 class="purple" class="centered">Select a region(s) on the left and year(s) and month(s) in the checkboxes. Then, click on the button to see the corresponding data.</p1>
 
                
                     <!-- Add checkbox filter for years -->
                     <div class="year-filter2">
-                        <p>Filter by Year: </p>
+                        <p class="purple">Filter by Year: </p>
                         <label for="17"><input type="checkbox" name="check3" value="2017" class="year-button">2017</label>
                         <label for="18"><input type="checkbox" name="check3" value="2018" class="year-button">2018</label>
                         <label for="19"><input type="checkbox" name="check3" value="2019" class="year-button">2019</label>
@@ -147,7 +147,7 @@
 
                     <!-- Add checkbox filter for months -->
                     <div class="month-filter2">
-                        <p>Filter by Month: </p>
+                        <p class="purple">Filter by Month: </p>
                         <label for="January"><input type="checkbox" name="check3" value="JAN" id="January" class="month-button">JAN</label> 
                         <label for="Februrary"><input type="checkbox" name="check3" value="FEB" id="Februrary" class="month-button">FEB</label>
                         <label for="March"><input type="checkbox" name="check3" value="MAR" id="March" class="month-button">MAR</label> 
@@ -180,7 +180,7 @@
 
     <div id="Visualization3" class="tabcontent">
         <!-- Define what "SPI" means because it is a critical feature in our visualizations -->
-        <p>"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
+        <p class="purple">"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
 
         <!-- Create the section that contains a bar chart and a scatter plot that are linked together through brushing and clicking-->
         <div class="container">
@@ -188,7 +188,7 @@
                 <div class="child3">
                 <div class="year-filter3">
                     <!-- Create a drop down menu that allows users to filter the charts by year -->
-                    <p>Filter Charts by Year: </p>
+                    <p class="purple">Filter Charts by Year: </p>
                         <select id="selectYear2">
                             <option>2017</option>
                             <option>2018</option>
@@ -197,7 +197,7 @@
                     <p>
 
                     <!-- Add instructions for accessing the tooltip -->
-                    <p1>Hover over a chart element to see the data it represents</p1>
+                    <p1 class="purple">Hover over a chart element to see the data it represents</p1>
                     <br>
                     <br>
 
@@ -212,12 +212,12 @@
                 <div id="link1">
                     <!-- Add a title and linking directions above the bar chart -->
                     <h4 class="centered">Annual Precipitation for Each Region</h4>
-                    <p class="centered">Click on a bar to highlight points that represent the same region.</p>
+                    <p class="purple" class="centered">Click on a bar to highlight points that represent the same region.</p>
                 </div>
                 <div id="link2">
                     <!-- Add a title and linking directions above the scatter plot -->
                     <h4 class="centered">Precipitation vs. SPI</h4>
-                    <p class="centered">Brush over points to highlight bars that represent the same region.</p>
+                    <p class="purple" class="centered">Brush over points to highlight bars that represent the same region.</p>
                 </div>
             </div>
         </div>
