--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Link css file -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Link to leaflet css -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
     crossorigin=""/>
@@ -16,6 +17,7 @@
     <!-- Link to d3 library -->
     <script src="js/d3.v6.1.1/d3.min.js"></script>
 
+    <!-- Link to leaflet js -->
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>    
