fixed issue with popups

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
             <li><a href="https://stackoverflow.com/questions/42204194/leaflet-only-renders-into-one-corner">Fixing Leaflet Map that Render in One Corner</a></li>
             <li><a href="https://stackoverflow.com/questions/23567203/leaflet-changing-marker-color">Leaflet Map Changing Marker Color</a></li>
             <li><a href="https://leafletjs.com/examples/layers-control/">Leaflet Add Marker Layer</a></li>
+            <li><a href="https://stackoverflow.com/questions/20816173/close-all-popups-with-leaflet-js">Close All Popups with Leaflet.js</a></li>
         </ul>
     </div>
 
