edited caption for map

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div id="Visualization1" class="tabcontent">
-        <p class="blue">Zoom in/out of the Massachusetts map as needed. Click on different markers for different counties to see which Massachusetts region you live in.</p>
+        <p class="blue">Zoom in/out of the Massachusetts map as needed. Click on different markers for different counties and refer to the legend to see which Massachusetts region you live in based on the color of your county's marker.</p>
         <!-- Split tab content to separate containers -->
         <div class="container">
             <div class="child1">
