--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div id="Visualization2" class="tabcontent">
         <!-- Define what "SPI" means because it is a critical feature in our visualizations -->
-        <p class="blue">"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
+        <p class="blue">"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal. In the visaulization below, 3-Month SPIs are displayed, which means the values are based on "look-back" periods of three months.</p>
 
         <!-- Create separate section for content (visualization) of webpage -->
         <div class="container">
@@ -191,7 +191,7 @@
 
     <div id="Visualization3" class="tabcontent">
         <!-- Define what "SPI" means because it is a critical feature in our visualizations -->
-        <p class="blue">"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
+        <p class="blue">"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal. In the visaulization below, 3-Month SPIs are displayed, which means the values are based on "look-back" periods of three months.</p>
 
         <!-- Create the section that contains a bar chart and a scatter plot that are linked together through brushing and clicking-->
         <div class="container">
