--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <h3 class="centered">A Projection of Whether Lower Precipitation Values Indicate a Higher Risk of Intense Droughts</h3>
 
                         <!-- Add instructions for how to get data to show on the scatter plot and how to interact with it-->
-                        <p1 class="blue" class="centered">Select a region(s) on the left and year(s) and month(s) in the checkboxes. Then, click on the button to see the corresponding data.</p1>
+                        <p1 class="blue" class="centered">Select a region(s) on the left as well as year(s) and month(s) in the checkboxes. Then, click on the button to see the corresponding data.</p1>
 
                    
                         <!-- Add checkbox filter for years -->
@@ -218,7 +218,7 @@
                         <p class="blue" class="centered">Select a year using the drop down menu. Then, click on the button to see the corresponding data across both graphs.</p>
 
                         <!-- Add instructions for accessing the tooltip -->
-                        <p1 class="blue">** Hover over a chart element to see the data it represents. Specifically for each region, focus on how the number of points left and/or right of the x=0 vertical line in the scatter plot correspond with the annual precipitation of that region in the bar chart. </p1>
+                        <p1 class="blue">** Hover over a chart element to see the data it represents. For each region, focus on how the number of points to the left and/or right of the vertical line where SPI = 0 in the scatter plot corresponds with the annual precipitation of that region as shown in the bar chart. </p1>
                         <br>
                         <br>
 
