--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <p class="blue" class="centered">Select a year using the drop down menu. Then, click on the button to see the corresponding data across both graphs.</p>
 
                         <!-- Add instructions for accessing the tooltip -->
-                        <p1 class="blue">** Hover over a chart element to see the data it represents. For each region, focus on how the number of points to the left and/or right of the vertical line where SPI = 0 in the scatter plot corresponds with the annual precipitation of that region as shown in the bar chart. </p1>
+                        <p1 class="blue">** Hover over a chart element to see the data it represents. For each region, compare for across different years the relationship between the number of points to the left and/or right of the vertical line where SPI = 0 in the scatter plot and the annual precipitation of that region as shown in the bar chart. </p1>
                         <br>
                         <br>
 
