--- a/index.html
+++ b/index.html
@@ -217,9 +217,10 @@
                         <!-- Add instructions for how to get data to appear -->
                         <p class="blue" class="centered">Select a year using the drop down menu. Then, click on the button to see the corresponding data across both graphs.</p>
 
-                        <!-- Add instructions for accessing the tooltip -->
-                        <p1 class="blue">** Hover over a chart element to see the data it represents. For each region, compare for across different years the relationship between the number of points to the left and/or right of the vertical line where SPI = 0 in the scatter plot and the annual precipitation of that region as shown in the bar chart. </p1>
+                        <!-- Add instructions for accessing the tooltip and how to interpret the two charts together -->
+                        <p1 class="blue">** Hover over a chart element to see the data it represents. For each region, compare number of points to the left and/or right of the vertical line where SPI = 0 in the scatter plot to the annual precipitation of that region as shown in the bar chart. </p1>
                         <br>
+
                         <br>
 
                             <!-- Create a button that allows users to see data presented on the 2 charts -->
