--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <!-- Add instructions for how to get data to show on the scatter plot and how to interact with it-->
                         <p1 class="blue" class="centered">Select a region(s) on the left as well as year(s) and month(s) in the checkboxes. Then, click on the button to see the corresponding data.</p1>
 
-                        <p class="blue" class="centered">**3-Month SPIs are displayed below, which means the values are based on "look-back" periods of three months.</p>
+                        <p class="blue" class="centered">**3-Month SPIs shown: values are based on "look-back" periods of three months.</p>
                    
                         <!-- Add checkbox filter for years -->
                         <div class="year-filter2">
@@ -234,13 +234,14 @@
                     <div id="link1">
                         <!-- Add a title and linking directions above the bar chart -->
                         <h4 class="centered">Annual Precipitation for Each Region</h4>
-                        <p class="blue" class="centered">** Click on a bar to highlight points that represent the same region.</p>
+                        <p class="blue" class="centered">Click on a bar to highlight points that represent the same region.</p>
+                        <p class="blue" class="centered">**Click on white spaces of the scatter plot to unselect bar and highlighted points.</p>
                     </div>
                     <div id="link2">
                         <!-- Add a title and linking directions above the scatter plot -->
                         <h4 class="centered">Precipitation vs. SPI</h4>
-                        <p class="blue" class="centered">**Brush over points to highlight bars that represent the same region.</p>
-                        <p class="blue" class="centered">**3-Month SPIs are displayed below, which means the values are based on "look-back" periods of three months.</p>
+                        <p class="blue" class="centered">Brush over points to highlight bars that represent the same region.</p>
+                        <p class="blue" class="centered">**3-Month SPIs shown: values are based on "look-back" periods of three months.</p>
                     </div>
                 </div>
             </div>
