set up final report section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 
         <h2>Background</h2>
         <div>
-            <!-- TODO: Add link to report, demo video, link to data etc. here*/ -->
             <h4>Data</h4>
             <div>
                 <p>
@@ -61,10 +60,21 @@
                 </p>
             </div>
             <h4>Demo Video</h4>
-            <video controls="controls">
-                <source type="video/mp4" src="/demo_video.mp4" >   
-                <track src="/demo_video_caption.vtt" label="English" kind="captions" srclang="en-us" default >
-            </video>
+            <div>
+                <video controls="controls">
+                    <source type="video/mp4" src="/demo_video.mp4" >   
+                    <track src="/demo_video_caption.vtt" label="English" kind="captions" srclang="en-us" default >
+                </video>
+            </div>
+            <h4>Report</h4>
+            <div>
+                <ul>
+                    <li>
+                        <!-- ADD LINK!!!!! -->
+                        <a href="">Final Report</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
