--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 </p>
             </div>
 
+            <!-- A demo video that instructs users how to navigate through the visualization tool to address our domain tasks -->
             <h4>Demo Video</h4>
             <div>
                 <video controls="controls">
@@ -68,12 +69,6 @@
                 </video>
             </div>
 
-   <!--          <h4>Demo Video</h4>
-            <div>
-                <video controls="controls">
-                    <source type="video/mp4" src="/demo_video.mp4" >   
-                    <track src="/demo_video_caption.vtt" label="English" kind="captions" srclang="en-us" default >
-                </video>
             </div> -->
             <h4>Report</h4>
             <div>
