adding more comments on index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 </head>
 
 <body>
+    <!-- Title of our webpage -->
     <h1 class="centered">Diverting Droughts with Data: Designing a Visualization Tool to Drive Water Conservation Efforts Across Massachusetts</h1>
 
+    <!-- Including tabs for our visualization tool-->
     <div class="tab">
         <button class="tablinks" onclick="openTab(event, 'Acknowledgements')">Acknowledgements</button>
         <button class="tablinks" onclick="openTab(event, 'Visualization3')">Linked Bar and Scatter Plot</button>
@@ -34,6 +36,7 @@
         <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'About')">About</button>
     </div>
 
+    <!-- Describing background information as well as motivations for this project -->
     <div id="About" class="tabcontent">
         <h2>Motivation</h2>
 
