--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </video>
             </div>
 
-            </div> -->
+            </div>
             <h4>Report</h4>
             <div>
                 <ul>
