added final report

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
             <div>
                 <ul>
                     <li>
-                        <!-- ADD LINK!!!!! -->
-                        <a href="">Final Report</a>
+                        <a href="DS4200_Final_Project.pdf">Final Report</a>
                     </li>
                 </ul>
             </div>
